<resources>
	<string name="app_name">Family Tree</string>
	<string name="load_tree">Load tree</string>
	<string name="create_a_new_tree">New tree</string>
	<string name="familyTree_logo_cntDesc">A family tree logo</string>
	
	<string-array name="sexes">
		<item>Other/Unknown</item>
		<item>Male</item>
		<item>Female</item>
	</string-array>
	
	<!--Twitter application ID and custom URL scheme (app ID prefixed by 'fb'). -->
	<!--Not set up-->
	<string name="twitter_application_id" translatable="false">YOUR_APP_ID</string>
	<string name="twitter_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
	<string name="sign_up">Sign up</string>
	<string name="or">or</string>
	<string name="log_in">Log in</string>
	<string name="logout">Logout</string>
	<string name="iIcon_cntDesc">icon for more information, an \'i\'</string>
	<!-- Preference Titles -->
	<string name="messages_header">Messages</string>
	<string name="sync_header">Sync</string>
	
	<!-- Messages Preferences -->
	<string name="signature_title">Your signature</string>
	<string name="reply_title">Default reply action</string>
	
	<!-- Sync Preferences -->
	<string name="sync_title">Sync email periodically</string>
	<string name="attachment_title">Download incoming attachments</string>
	<string name="attachment_summary_on">Automatically download attachments for incoming emails
	</string>
	<string name="attachment_summary_off">Only download attachments when manually requested</string>
	<string name="first_name_example" formatted="false">Kane</string>
	<string name="add_member">Create family member</string>
	<string name="edit_member">Edit family Member</string>
	<string name="first_name">First Name:</string>
	<string name="last_name">Last Name:</string>
	<string name="last_name_example">Bupponoc</string>
	<string name="sex">Sex:</string>
	<string name="birthdate">Birthdate:</string>
	<string name="birthdate_example">2020–12–15</string>
	<string name="deathdate">Deathdate:</string>
	<string name="deathdate_example">2022–03–08</string>
	<string name="mother">Mother:</string>
	<string name="father">Father:</string>
	<string name="edit_or_add_family_member">Edit or Add Family Member</string>
	<string name="confirm">Confirm</string>
	<string name="familyMember_image_description">image dhowing the family member, by deafult a blank user icon</string>
	<string name="instructions">Instructions</string>
	<string name="refresh_tree_info_instruction">Long click the refresh button to \"hard\" refresh the page</string>
	<string name="viewing_family_tree">Viewing family tree</string>
	<string name="a_home_icon">A home icon</string>
	<string name="a_back_arrow">a back arrow</string>
	<string name="select_a_family_tree">Select a family tree</string>
	<string name="close">Close</string>
	<string name="edit">Edit</string>
	<string name="deathday">Deathday</string>
	<string name="birthday">Birthday</string>
	<string name="age">Age</string>
	<string name="sex_no_colon">Sex</string>
	<string name="partners">Partners</string>
	<string name="children">Children</string>
	<string name="delete_description">a red x; delete icon</string>
	<string name="add_descr">A plus icon; an add icon</string>
	<string name="refresh_descr">a refresh icon. A circular arrow pointing back at its start</string>
	<string name="pencil_descr">a pencil; an edit icon</string>
	<string name="familyTree_descr">a family tree line graphic</string>
	<string name="age_placeholder">%d years old</string>
	<string name="children_placeholder">%d kid(s)</string>
	<string name="partners_placeholder">%d partner(s)</string>
	<string name="date_created_placeholder">Created: %s</string>
</resources>