<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".LaunchActivity">
	
	<TextView
		android:id="@+id/txtTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:text="@string/app_name"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<Button
		android:id="@+id/btnLoadTree"
		android:layout_width="@dimen/btnMdW"
		android:layout_height="@dimen/btnMdH"
		android:layout_marginTop="45dp"
		android:text="@string/load_tree"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/btnNewTree"
		app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
	
	<Button
		android:id="@+id/btnNewTree"
		android:layout_width="@dimen/btnMdW"
		android:layout_height="@dimen/btnMdH"
		android:text="@string/create_a_new_tree"
		app:layout_constraintBottom_toBottomOf="@+id/btnLoadTree"
		app:layout_constraintEnd_toStartOf="@+id/btnLoadTree"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/btnLoadTree" />
	
	<ImageView
		android:id="@+id/imgLogo"
		android:layout_width="0dp"
		android:layout_height="300dp"
		android:layout_marginTop="32dp"
		android:contentDescription="@string/familyTree_logo_cntDesc"
		android:scaleType="fitCenter"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txtTitle"
		app:srcCompat="@drawable/family_tree" />
	
	<LinearLayout
		android:id="@+id/vllAuth"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="50dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent">
		
		<TextView
			android:id="@+id/txtLogin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/log_in"
			android:textAlignment="center" />
		
		<TextView
			android:id="@+id/txtOr"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/or"
			android:textAlignment="center" />
		
		<TextView
			android:id="@+id/txtSignup"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/sign_up"
			android:textAlignment="center" />
		
		<Button
			android:id="@+id/btnLogout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/logout"
			android:textAlignment="center" />
	</LinearLayout>
	<!--TODO: replace with a better ? icon-->
	<ImageButton
		android:id="@+id/btnInfo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@android:drawable/ic_dialog_info"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:contentDescription="@string/iIcon_cntDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>